--- a/OpenRobertaUSB/src/main/resources/messages_en.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_en.properties
@@ -20,6 +20,7 @@ aboutInfo This program is part of The Open Roberta Lab, an open-source programmi
 updateInfo There is a new firmware version for your robot available. Please update the robot now. You just have to click »OK« and restart the robots system afterwards. Your programs and settings will be kept!
 restartInfo Update successful! Your robot will only be able to use the new firmware after a restart of the system. Just turn the robot off and on again and reconnect the robot to the Open Roberta Lab afterwards.
 updateFail The update has failed, please try it again.
+downloadFail The download of the program has failed, please try it again.
 updateSuccess The update was successful. Now, please shut down your EV3 and start it again.
 tokenTimeout The token is expired. Click on »OK« and afterwards on »connect« to try it again.
 checkCustomDesc Show advanced options
