#4 add generic robot messages

--- a/OpenRobertaUSB/src/main/resources/messages_en.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-title EV3 USB-Connection
+title USB-Connection
 file File
 info Info
 cancel cancel
@@ -21,7 +21,7 @@ updateInfo There is a new firmware version for your robot available. Please upda
 restartInfo Update successful! Your robot will only be able to use the new firmware after a restart of the system. Just turn the robot off and on again and reconnect the robot to the Open Roberta Lab afterwards.
 updateFail The update has failed, please try it again.
 downloadFail The download of the program has failed, please try it again.
-updateSuccess The update was successful. Now, please shut down your EV3 and start it again.
+updateSuccess The update was successful. Now, please shut down your robot and start it again.
 tokenTimeout The token is expired. Click on »OK« and afterwards on »connect« to try it again.
 checkCustomDesc Show advanced options
 customDesc Custom server address
