--- a/OpenRobertaUSB/src/main/resources/messages_de.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_de.properties
@@ -1,4 +1,4 @@
-title EV3 USB-Verbindung
+title USB-Verbindung
 file Datei
 info Info
 cancel abbrechen
@@ -9,7 +9,7 @@ name Name
 connect verbinde
 disconnect trenne
 plugInInfo Schließe den Roboter mit dem USB Kabel an den Computer an. 
-connectInfo Klicke nun auf »verbinden«, um den EV3 Roboter mit dem Open Roberta Lab zu verbinden.
+connectInfo Klicke nun auf »verbinden«, um den Roboter mit dem Open Roberta Lab zu verbinden.
 tokenInfo Den Token kannst du mit »kopieren« und »einfügen« im Open Roberta Lab unter Roboter>verbinden einfügen.
 serverInfo Du kannst jetzt deine Programme an den Roboter schicken. Vergiss nicht das USB Kabel wieder einzustecken, wenn dein Programm ausgeführt wurde.
 attention Achtung
