--- a/OpenRobertaUSB/src/main/resources/messages_en.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_en.properties
@@ -9,25 +9,25 @@ name name
 connect connect
 disconnect disconnect
 plugInInfo Connect the robot with the pc using the USB cable.
-connectInfo Click now on »connect« to connect the robot with the Open Roberta Lab.
+connectInfo Click now on \u00BBconnect\u00AB to connect the robot with the Open Roberta Lab.
 tokenInfo You can now put the token with copy & paste into the connection pop-up in the Open Roberta Lab.
 serverInfo Start sending programs to the robot. Don't forget to plug the USB-cable into robot again after the program has been executed.
 attention Attention
 confirmCloseInfo Your robot will loose the connection to the Open Roberta Lab, if you close this application.
 httpErrorInfo There is a problem with your Internet connection.
 httpBrickInfo The connection to your robot has been interrupted.
-aboutInfo This program is part of The Open Roberta Lab, an open-source programming platform developed by Fraunhofer IAIS within the initiative »Roberta Learning with Robots«<br>Version ${version}
-updateInfo There is a new firmware version for your robot available. Please update the robot now. You just have to click »OK« and restart the robots system afterwards. Your programs and settings will be kept!
+aboutInfo This program is part of The Open Roberta Lab, an open-source programming platform developed by Fraunhofer IAIS within the initiative \u00BBRoberta Learning with Robots\u00AB<br>Version ${version}
+updateInfo There is a new firmware version for your robot available. Please update the robot now. You just have to click \u00BBOK\u00AB and restart the robots system afterwards. Your programs and settings will be kept!
 restartInfo Update successful! Your robot will only be able to use the new firmware after a restart of the system. Just turn the robot off and on again and reconnect the robot to the Open Roberta Lab afterwards.
 updateFail The update has failed, please try it again.
 downloadFail The download of the program has failed, please try it again.
 updateSuccess The update was successful. Now, please shut down your robot and start it again.
-tokenTimeout The token is expired. Click on »OK« and afterwards on »connect« to try it again.
+tokenTimeout The token is expired. Click on \u00BBOK\u00AB and afterwards on \u00BBconnect\u00AB to try it again.
 checkCustomDesc Show advanced options
 customDesc Custom server address
 ip IP:
 port Port:
-back back
+scan scan
 listInfo Available robots:
 clearOutput Clear output
 
