--- a/OpenRobertaUSB/src/main/resources/messages_de.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_de.properties
@@ -8,24 +8,24 @@ token Token
 name Name
 connect verbinde
 disconnect trenne
-plugInInfo Schließe den Roboter mit dem USB Kabel an den Computer an.
+plugInInfo Schlie\u00DFe den Roboter mit dem USB Kabel an den Computer an.
 connectInfo Klicke nun auf \u00BBverbinden\u00AB, um den Roboter mit dem Open Roberta Lab zu verbinden.
-tokenInfo Den Token kannst du mit \u00BBkopieren\u00AB und \u00BBeinfügen\u00AB im Open Roberta Lab unter Roboter>verbinden einfügen.
-serverInfo Du kannst jetzt deine Programme an den Roboter schicken. Vergiss nicht das USB Kabel wieder einzustecken, wenn dein Programm ausgeführt wurde.
+tokenInfo Den Token kannst du mit \u00BBkopieren\u00AB und \u00BBeinf\u00FCgen\u00AB im Open Roberta Lab unter Roboter>verbinden einf\u00FCgen.
+serverInfo Du kannst jetzt deine Programme an den Roboter schicken. Vergiss nicht das USB Kabel wieder einzustecken, wenn dein Programm ausgef\u00FChrt wurde.
 attention Achtung
 confirmCloseInfo Wenn du das Programm beendest ist dein Roboter nicht mehr mit dem Open Roberta Lab verbunden.
 httpErrorInfo Die Internetverbindung zum Open Roberta Lab ist unterbrochen.
 httpBrickInfo Die Verbindung zu deinem Roboter wurde unterbrochen.
 aboutInfo Dieses Programm ist Teil des Open Roberta Lab, eine Open-Source-Entwicklung des Fraunhofer-Instituts IAIS im Kontext der Initiative \u00BBRoberta Lernen mit Robotern\u00AB<br>Version ${version}
-updateInfo Die Firmware deines Roboters ist veraltet. Aktualisiere bitte zuerst die Firmware. Klicke dazu auf \u00BBOK\u00AB und führe danach einen Neustart des Roboters durch. Vorhandene Programme auf dem Roboter bleiben erhalten!
+updateInfo Die Firmware deines Roboters ist veraltet. Aktualisiere bitte zuerst die Firmware. Klicke dazu auf \u00BBOK\u00AB und f\u00FChre danach einen Neustart des Roboters durch. Vorhandene Programme auf dem Roboter bleiben erhalten!
 restartInfo Update erfolgreich! Dein Roboter kann die neue Firmware aber erst nach einem Neustart nutzen. Schalte den Roboter aus und wieder ein und verbinde ihn danach mit dem Open Roberta Lab.
 updateFail Das Update hat nicht geklappt, bitte versuche es erneut.
 downloadFail Der Download des Programms hat nicht geklappt, bitte versuche es erneut.
-tokenTimeout Die Gültigkeit des Token ist abgelaufen. Klicke auf \u00BBOK\u00AB und anschließend auf \u00BBverbinden\u00AB um es noch mal zu probieren.
+tokenTimeout Die G\u00FCltigkeit des Token ist abgelaufen. Klicke auf \u00BBOK\u00AB und anschlie\u00DFend auf \u00BBverbinden\u00AB um es noch mal zu probieren.
 checkCustomDesc Zeige erweiterte Optionen
 customDesc Benutzerdefinierte Serveradresse
 ip IP:
 port Port:
 scan scannen
-listInfo Verfügbare Roboter:
-clearOutput Lösche Ausgabe
+listInfo Verf\u00FCgbare Roboter:
+clearOutput L\u00F6sche Ausgabe
