#18 add arduino-ids.txt file

--- a/OpenRobertaUSB/src/main/resources/messages_de.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_de.properties
@@ -29,3 +29,8 @@ port Port:
 scan scannen
 listInfo Verf\u00FCgbare Roboter:
 clearOutput L\u00F6sche Ausgabe
+errorReadConfig Es gibt Fehler mit der arduino-ids.txt Datei:
+errorConfigVendorId Vendor ID ist keine Hexzahl.
+errorConfigProductId Product ID ist keine Hexzahl.
+errorConfigArduinoType Arduino Typ wird nicht unterst\u00FCtzt.
+errorConfigFormat Falsches Format.
