--- a/OpenRobertaUSB/src/main/resources/messages_en.properties
+++ b/OpenRobertaUSB/src/main/resources/messages_en.properties
@@ -30,5 +30,10 @@ port Port:
 scan scan
 listInfo Available robots:
 clearOutput Clear output
+errorReadConfig There are errors with the arduino-ids.txt file:
+errorConfigVendorId Vendor ID is not a hex number.
+errorConfigProductId Product ID is not a hex number.
+errorConfigArduinoType Arduino board type is not supported.
+errorConfigFormat Incorrect format.
 
 version = ${version}
